deploy: ceddc726d5b684372730032993eb8fd157cd0c31

--- a/index.html
+++ b/index.html
@@ -14549,7 +14549,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Primary Fact Table</strong> → views.gtfs_schedule_fact_daily_feed_routes<br>
-<strong>Secondary Tables</strong> →  views.gtfs_schedule_dim_feeds</p>
+<strong>Secondary Table</strong> →  views.gtfs_schedule_dim_feeds</p>
 <p><em>Time</em> → date (GROUP BY)<br>
 <em>Geography</em> → route_key (COUNT)<br>
 <em>Agency</em> → Join w/ views.gtfs_schedule_dim_feeds on feed_key for calitp_feed_name (GROUP BY)</p>
