deploy: 95371dd5e102f2332ff14e202c69d0cc6461d006

--- a/index.html
+++ b/index.html
@@ -14707,7 +14707,7 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="assets/routes_agency_over_time.png" alt=""></p>
+<p><img src="assets/routes_agency_over_time.png" alt="Drawing" style="width: 700px;"/></p>
 
 </div>
 </div>
