deploy: ebec0031a3c1083a73b2982850de7a61a67e5b16

--- a/index.html
+++ b/index.html
@@ -14536,7 +14536,7 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>The queries represented below are as follows:</p>
+<p>The queries represented in the following tutorial are as follows:</p>
 <ul>
 <li><strong>Number of Routes for a Given Agency Over Time</strong> - observing a change in route numbers per agency across time</li>
 <li><strong>Number of Stops for a Given Agency Over Time</strong></li>
@@ -14554,12 +14554,12 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>The methods that we can use to answer them are:</p>
+<p>The tools that we can use to answer them are:</p>
 <ul>
 <li><strong>SQL</strong> - Using the BigQuery Browser</li>
 <li><strong>Python</strong> <ul>
 <li><em>siuba</em> - a convenient data analysis library in Python</li>
-<li><em>calitp</em> - a personalized library to incorporate calitp's needs</li>
+<li><em>calitp</em> - a personalized library incorporating calitp's unique needs</li>
 <li><em>pandas</em> - a useful data analysis library, used sparsely in the examples below</li>
 </ul>
 </li>
@@ -14575,11 +14575,11 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h4 id="Fact-Tables">Fact Tables<a class="anchor-link" href="#Fact-Tables">&#182;</a></h4><p>These tables contain measurements, metrics, and facts used to answer the questions below</p>
+<h4 id="Fact-Tables">Fact Tables<a class="anchor-link" href="#Fact-Tables">&#182;</a></h4><p>These tables contain measurements, metrics, and facts used to answer the questions from the following perspectives:</p>
 <p><strong>Feeds</strong></p>
 <ul>
 <li>views.gtfs_schedule_fact_daily_feeds  <ul>
-<li>(Gtfs Schedule Fact Daily Feeds in Metabase)</li>
+<li>(Gtfs Schedule Fact Daily Feeds in Metabase)  </li>
 </ul>
 </li>
 </ul>
@@ -14603,9 +14603,8 @@ a.anchor-link {
 <li>(Gtfs Schedule Data Feed Trip Stops Latest in Metabase)  </li>
 </ul>
 </li>
-<li>views.gtfs_schedule_fact_daily_trips  </li>
 </ul>
-<h4 id="Dimensional-Tables">Dimensional Tables<a class="anchor-link" href="#Dimensional-Tables">&#182;</a></h4><p>These tables compliment the fact tables by providing additional descriptive attributes</p>
+<h4 id="Dimensional-Tables">Dimensional Tables<a class="anchor-link" href="#Dimensional-Tables">&#182;</a></h4><p>These tables compliment the fact tables by providing additional descriptive attributes:</p>
 <ul>
 <li>views.gtfs_schedule_dim_feeds - joining with this table is the most common way to append calitp_feed_name (our primary agency identifier) to fact tables  <ul>
 <li>(Gtfs Schedule Dim Feeds in Metabase)  </li>
