deploy: 4779b0d66b3ae7606d2174069ff8505a25ceceb4

--- a/index.html
+++ b/index.html
@@ -14623,7 +14623,7 @@ a.anchor-link {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <ul>
 <li><strong>Agency</strong><ul>
-<li>calitp_feed_name  <ul>
+<li><strong>calitp_feed_name</strong>  <ul>
 <li>Our primary agency identifier - in most of the examples below, this is gathered from the table <strong>views.gtfs_schedule_dim_feeds</strong></li>
 </ul>
 </li>
