deploy: 69b7495a22b091ac141fee6870b71b98a673ebdf

--- a/index.html
+++ b/index.html
@@ -14830,7 +14830,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Primary Fact Table</strong> → Gtfs Schedule Fact Daily Feed Routes<br>
-<strong>Secondary Fact Table</strong> → Gtfs Schedule Dim Feeds</p>
+<strong>Secondary Table</strong> → Gtfs Schedule Dim Feeds</p>
 <p><em>Time</em> → <strong>Date</strong> (<em>FILTER</em>)<br>
 <em>Geography</em> → <strong>Route Key</strong> (the unique identifier for each record, to <em>COUNT</em> by)<br>
 <em>Agency</em> → Metabase automatically joins with table <strong>Gtfs Schedule Dim Feeds</strong> on variable <strong>Feed Key</strong> to get <strong>Calitp Feed Name</strong> (<em>FILTER</em>)</p>
@@ -14969,7 +14969,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Primary Fact Table</strong> → views.gtfs_schedule_fact_daily_feed_stops<br>
-<strong>Secondary Tables</strong> →  views.gtfs_schedule_dim_feeds</p>
+<strong>Secondary Table</strong> →  views.gtfs_schedule_dim_feeds</p>
 <p><em>Time</em> → <strong>date</strong> (<em>GROUP BY</em>)<br>
 <em>Geography</em> → <strong>stop_key</strong> (the unique identifier for each record, to <em>COUNT</em> by)<br>
 <em>Agency</em> → Join with table <strong>views.gtfs_schedule_dim_feeds</strong> on variable <strong>feed_key</strong> for <strong>calitp_feed_name</strong> (<em>GROUP BY</em>)</p>
@@ -15122,7 +15122,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Primary Fact Table</strong> → Gtfs Schedule Fact Daily Feed Stops<br>
-<strong>Secondary Fact Table</strong> → Gtfs Schedule Dim Feeds</p>
+<strong>Secondary Table</strong> → Gtfs Schedule Dim Feeds</p>
 <p><em>Time</em> → <strong>Date</strong> (<em>COUNT</em> by)<br>
 <em>Geography</em> → <strong>Stop Key</strong> (the unique identifier for each record, to <em>COUNT</em> by)<br>
 <em>Agency</em> → Metabase automatically joins with table <strong>Gtfs Schedule Dim Feeds</strong> on variable <strong>Feed Key</strong> to get <strong>Calitp Feed Name</strong> (<em>FILTER</em> by)</p>
@@ -15143,7 +15143,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Primary Fact Table</strong> → views.gtfs_schedule_fact_daily_feed_stops<br>
-<strong>Secondary Tables</strong> →  views.gtfs_schedule_dim_feeds</p>
+<strong>Secondary Table</strong> →  views.gtfs_schedule_dim_feeds</p>
 <p><em>Time</em> → <strong>date</strong> (<em>GROUP BY</em>)<br>
 <em>Geography</em> → <strong>stop_key</strong> (the unique identifier for each record, to <em>COUNT</em> by)<br>
 <em>Agency</em> → Join with table <strong>views.gtfs_schedule_dim_feeds</strong> on variable <strong>feed_key</strong> for <strong>calitp_feed_name</strong> (<em>GROUP BY</em>)</p>
@@ -15365,7 +15365,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Primary Fact Table</strong> → Gtfs Schedule Data Feed Trip Stops Latest<br>
-<strong>Secondary Fact Table</strong> → Gtfs Schedule Dim Feeds</p>
+<strong>Secondary Table</strong> → Gtfs Schedule Dim Feeds</p>
 <p><em>Time</em> → <strong>no variable</strong> - this table only has information for the current day<br>
 <em>Geography</em> → <strong>Stop Time Key</strong> (the unique identifier for each record, to <em>COUNT</em> by)<br>
 <em>Agency</em> → Metabase automatically joins with table <strong>Gtfs Schedule Dim Feeds</strong> on variable <strong>Feed Key</strong> to get <strong>Calitp Feed Name</strong> (<em>FILTER</em> by)</p>
@@ -15512,7 +15512,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Primary Fact Table</strong> → views.gtfs_schedule_fact_daily_feeds<br>
-<strong>Secondary Fact Table</strong> → views.gtfs_schedule_dim_feeds</p>
+<strong>Secondary Table</strong> → views.gtfs_schedule_dim_feeds</p>
 <p><em>Time</em> → <strong>date</strong>, <strong>feed_end_date</strong><br>
 <em>Measure</em> → <strong>days_until_feed_end_date</strong><br>
 <em>Agency</em> → Join with table <strong>views.gtfs_schedule_dim_feeds</strong> on variable <strong>feed_key</strong> for <strong>calitp_feed_name</strong> (<em>GROUP BY</em>)</p>
@@ -15609,7 +15609,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Primary Fact Table</strong> → Gtfs Schedule Fact Daily Feeds<br>
-<strong>Secondary Fact Table</strong> → Join: Gtfs Schedule Dim Feeds</p>
+<strong>Secondary Table</strong> → Join: Gtfs Schedule Dim Feeds</p>
 <p><em>Time</em> → <strong>Date</strong>, <strong>Feed End Date</strong><br>
 <em>Measure</em> → <strong>Days Until Feed End Date</strong><br>
 <em>Agency</em> → Join with table <strong>Gtfs Schedule Dim Feeds</strong> on variable <strong>feed_key</strong> for <strong>Calitp Feed Name</strong> (<em>FILTER</em> by) and <strong>Feed End Date</strong></p>
@@ -15643,7 +15643,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Primary Fact Table</strong> → views.gtfs_schedule_fact_daily_feeds<br>
-<strong>Secondary Fact Table</strong> → views.gtfs_schedule_dim_feeds</p>
+<strong>Secondary Table</strong> → views.gtfs_schedule_dim_feeds</p>
 <p><em>Time</em> → <strong>date</strong> (<em>FILTER</em> by), <strong>feed_end_date</strong><br>
 <em>Measure</em> → <strong>days_until_feed_end_date</strong><br>
 <em>Agency</em> → Join with table <strong>views.gtfs_schedule_dim_feeds</strong> on variable <strong>feed_key</strong> for <strong>calitp_feed_name</strong> (<em>FILTER</em> by)</p>
@@ -15741,7 +15741,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Primary Fact Table</strong> →  views.gtfs_schedule_data_feed_trip_stops_latest<br>
-<strong>Secondary Tables</strong> →  views.gtfs_schedule_dim_feeds</p>
+<strong>Secondary Table</strong> →  views.gtfs_schedule_dim_feeds</p>
 <p><em>Time</em> → <strong>no variable</strong>, finding max across all days<br>
 <em>Geography</em> → <strong>trip_id</strong> (the unique identifier for each record, to <em>GROUP BY</em>)<br>
 <em>Agency</em> → Join with table <strong>views.gtfs_schedule_dim_feeds</strong> on variable <strong>feed_key</strong> for <strong>calitp_feed_name</strong> (<em>GROUP BY</em>)</p>
@@ -15851,7 +15851,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Primary Fact Table</strong> → Gtfs Schedule Data Feed Trip Stops Latest<br>
-<strong>Secondary Fact Table</strong> → Gtfs Schedule Dim Feeds</p>
+<strong>Secondary Table</strong> → Gtfs Schedule Dim Feeds</p>
 <p><em>Time</em> → <strong>no variable</strong>, finding max across all days<br>
 <em>Geography</em> → <strong>Trip ID</strong> (the unique identifier for each record, to <em>COUNT</em> by)<br>
 <em>Agency</em> → Metabase automatically joins with table <strong>Gtfs Schedule Dim Feeds</strong> on variable <strong>Feed Key</strong> to get <strong>Calitp Feed Name</strong> (<em>COUNT</em> by)</p>
@@ -15872,7 +15872,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Primary Fact Table</strong> →  views.gtfs_schedule_data_feed_trip_stops_latest<br>
-<strong>Secondary Tables</strong> →  views.gtfs_schedule_dim_feeds</p>
+<strong>Secondary Table</strong> →  views.gtfs_schedule_dim_feeds</p>
 <p><em>Time</em> → <strong>no variable</strong>, finding max across all days<br>
 <em>Geography</em> → <strong>trip_id</strong> (the unique identifier for each record, to <em>GROUP BY</em>)<br>
 <em>Agency</em> → Join with table <strong>views.gtfs_schedule_dim_feeds</strong> on variable <strong>feed_key</strong> for <strong>calitp_feed_name</strong> (<em>GROUP BY</em>)</p>
