--- a/index.html
+++ b/index.html
@@ -14616,7 +14616,7 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Important-Variable-Types-and-Variables">Important Variable Types and Variables<a class="anchor-link" href="#Important-Variable-Types-and-Variables">&#182;</a></h3>
+<h3 id="Important-Column-Types-and-Columns">Important Column Types and Columns<a class="anchor-link" href="#Important-Column-Types-and-Columns">&#182;</a></h3>
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
