deploy: 820b37de5c9c78df84efcd1dd4f6835da85ed2e1

--- a/index.html
+++ b/index.html
@@ -14559,7 +14559,7 @@ a.anchor-link {
 <li><strong>SQL</strong> - Using the BigQuery Browser</li>
 <li><strong>Python</strong> <ul>
 <li><em>siuba</em> - a convenient data analysis library in Python</li>
-<li><em>calitp</em> - a personalized library incorporating calitp's unique needs</li>
+<li><em>calitp</em> - a personalized package incorporating calitp's unique needs</li>
 <li><em>pandas</em> - a useful data analysis library, used sparsely in the examples below</li>
 </ul>
 </li>
@@ -14624,7 +14624,12 @@ a.anchor-link {
 <ul>
 <li><strong>Agency</strong><ul>
 <li><strong>calitp_feed_name</strong>  <ul>
-<li>Our primary agency identifier - in most of the examples below, this is gathered from the table <strong>views.gtfs_schedule_dim_feeds</strong></li>
+<li>(<strong>Calitp Feed Name</strong> in Metabase)</li>
+<li>Our primary agency identifier</li>
+<li>In most of the examples below, this is gathered from the table: views.<strong>gtfs_schedule_dim_feeds</strong><ul>
+<li>(<strong>Gtfs Schedule Dim Feeds</strong> in Metabase)</li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
